tcw3/designer/tests/bad/input_circular_objinit.tcwdl
pub comp crate::Comp1 {
    const wm: tcw3_pal::Wm { pub set; }
    const const2: u32 { pub set; }
    const const3: u32 { pub set; }
}
pub comp crate::Comp2 {
    const wm: tcw3_pal::Wm { pub set; }

    const const1 = crate::Comp1 {
        const const2 = || 42;

        // `const1.const2` is accessible only after `const1` is fully
        // constructed
        const const3 = |const1.const2| const2;
    };
}
